# docs/swagger.json
@@ -12,6 +12,46 @@
     "host": "localhost:9999",
     "basePath": "/",
     "paths": {
+        "/groups": {
+            "post": {
+                "description": "Create a group",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Group"
+                ],
+                "summary": "Create a group",
+                "parameters": [
+                    {
+                        "description": "CreateGroupRequest",
+                        "name": "group",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/groupControllerCommandDto.CreateRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "CreateGroupResponse",
+                        "schema": {
+                            "$ref": "#/definitions/groupControllerCommandDto.CreateResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "CreateGroupErrorResponse",
+                        "schema": {
+                            "$ref": "#/definitions/groupControllerCommandDto.CreateResponseError"
+                        }
+                    }
+                }
+            }
+        },
         "/users": {
             "post": {
                 "description": "Create an account",
@@ -54,6 +94,36 @@
         }
     },
     "definitions": {
+        "groupControllerCommandDto.CreateRequest": {
+            "type": "object",
+            "properties": {
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "groupControllerCommandDto.CreateResponse": {
+            "description": "SUCCESS 만이 성공",
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string",
+                    "example": "SUCCESS"
+                }
+            }
+        },
+        "groupControllerCommandDto.CreateResponseError": {
+            "description": "Create 의 오류응답",
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string"
+                },
+                "errorMessage": {
+                    "type": "string"
+                }
+            }
+        },
         "userControllerCommandDto.CreateRequest": {
             "type": "object",
             "properties": {
